--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-iframe": "^1.8.5",
+    "react-image-gallery": "^1.4.0",
     "react-intersection-observer": "^9.16.0",
     "react-number-format": "^5.4.4",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.2.0",
-    "yet-another-react-lightbox": "^3.23.0"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,6 +31,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
